# pathtracer_template

./: .gitignore  CMakeLists.txt  main.cpp
lab5/: main.cpp
project1/: CMakeLists.txt  main.cpp
project2/: main.cpp
